--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -9,19 +9,58 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "next": "^15.1.7",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3",
+    "@types/d3": "^7.4.3",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-axis": "^3.0.6",
+    "@types/d3-brush": "^3.0.6",
+    "@types/d3-chord": "^3.0.6",
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-contour": "^3.0.6",
+    "@types/d3-delaunay": "^6.0.4",
+    "@types/d3-dispatch": "^3.0.6",
+    "@types/d3-drag": "^3.0.7",
+    "@types/d3-dsv": "^3.0.7",
+    "@types/d3-ease": "^3.0.2",
+    "@types/d3-fetch": "^3.0.7",
+    "@types/d3-force": "^3.0.10",
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-geo": "^3.1.0",
+    "@types/d3-hierarchy": "^3.1.7",
+    "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-path": "^3.1.1",
+    "@types/d3-polygon": "^3.0.2",
+    "@types/d3-quadtree": "^3.0.6",
+    "@types/d3-random": "^3.0.3",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-shape": "^3.1.7",
+    "@types/d3-time": "^3.0.4",
+    "@types/d3-timer": "^3.0.2",
+    "@types/d3-transition": "^3.0.9",
+    "@types/d3-zoom": "^3.0.8",
+    "@types/estree": "^1.0.6",
+    "@types/geojson": "^7946.0.16",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^0.0.30",
+    "@types/next-auth": "^3.13.0",
+    "@types/node": "^20.17.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/zen-observable": "^0.8.7",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
