--- a/fi-frontend/tsconfig.json
+++ b/fi-frontend/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "target": "ESNext",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -13,15 +20,56 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": [
+      "node",
+      "d3",
+      "d3-array",
+      "d3-axis",
+      "d3-brush",
+      "d3-chord",
+      "d3-color",
+      "d3-contour",
+      "d3-delaunay",
+      "d3-dispatch",
+      "d3-drag",
+      "d3-dsv",
+      "d3-ease",
+      "d3-fetch",
+      "d3-force",
+      "d3-format",
+      "d3-geo",
+      "d3-hierarchy",
+      "d3-interpolate",
+      "d3-polygon",
+      "d3-quadtree",
+      "d3-random",
+      "d3-selection",
+      "d3-transition",
+      "d3-zoom",
+      "estree",
+      "geojson",
+      "json-schema",
+      "json5",
+      "zen-observable"
+    ],
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
