--- a/fi-frontend/tsconfig.json
+++ b/fi-frontend/tsconfig.json
@@ -12,45 +12,19 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "types": [
       "node",
-      "d3",
-      "d3-array",
-      "d3-axis",
-      "d3-brush",
-      "d3-chord",
-      "d3-color",
-      "d3-contour",
-      "d3-delaunay",
-      "d3-dispatch",
-      "d3-drag",
-      "d3-dsv",
-      "d3-ease",
-      "d3-fetch",
-      "d3-force",
-      "d3-format",
-      "d3-geo",
-      "d3-hierarchy",
-      "d3-interpolate",
-      "d3-polygon",
-      "d3-quadtree",
-      "d3-random",
-      "d3-selection",
-      "d3-transition",
-      "d3-zoom",
-      "estree",
-      "geojson",
-      "json-schema",
-      "json5",
-      "zen-observable"
+      "react",
+      "react-dom"
     ],
     "paths": {
       "@/*": [
@@ -61,13 +35,15 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": "."
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/**/*"
   ],
   "exclude": [
     "node_modules"
