--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "PORT=8080 next start",
+    "start": "PORT=3000 next start",
     "lint": "eslint . --ext .ts,.tsx",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@auth/core": "^0.37.4",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@azure/storage-blob": "^12.26.0",
     "@google/generative-ai": "^0.22.0",
+    "@prisma/client": "^6.4.1",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "next": "^15.1.7",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
@@ -71,6 +75,7 @@
     "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
     "postcss": "^8.5.3",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
