--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -16,6 +16,7 @@
     "@azure/storage-blob": "^12.26.0",
     "@google/generative-ai": "^0.22.0",
     "@prisma/client": "^6.4.1",
+    "@prisma/engines": "^6.4.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "next": "^15.1.7",
@@ -23,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
     "yfinance": "^0.0.6"
