--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -19,6 +19,8 @@
     "@prisma/engines": "^6.4.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.4.7",
+    "google-auth-library": "^9.15.1",
     "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/d3": "^7.4.3",
