Remove unused logo image, update ESLint configuration, add Tailwind CSS config, and refactor document structure

--- a/fi-frontend/tsconfig.json
+++ b/fi-frontend/tsconfig.json
@@ -3,7 +3,7 @@
     "typeRoots": [
       "./node_modules/@types"
     ],
-    "target": "ESNext",
+    "target": "esnext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -15,16 +15,14 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "ESNext",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "types": [
-      "node",
-      "react",
-      "react-dom"
+      "node"
     ],
     "paths": {
       "@/*": [
@@ -39,11 +37,10 @@
     "baseUrl": "."
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/**/*"
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
