--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "PORT=3000 next start",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "type-check": "tsc --noEmit"
   },
@@ -17,12 +17,15 @@
     "@google/generative-ai": "^0.22.0",
     "@prisma/client": "^6.4.1",
     "@prisma/engines": "^6.4.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@types/react-pdf": "^5.0.7",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.4.7",
     "google-auth-library": "^9.15.1",
     "next": "^15.1.7",
     "next-auth": "^4.24.11",
+    "pdf.js-extract": "^0.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
@@ -33,6 +36,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.21.0",
+    "@next/eslint-plugin-next": "^15.1.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -75,8 +80,10 @@
     "@types/react-dom": "^19",
     "@types/styled-components": "^5.1.34",
     "@types/zen-observable": "^0.8.7",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
+    "eslint": "^8.57.0",
     "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
     "postcss": "^8.5.3",
