--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "PORT=3000 next start",
+    "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/core": "^0.37.4",
+    "@auth/core": "^0.34.2",
     "@auth/prisma-adapter": "^2.7.4",
     "@azure/storage-blob": "^12.26.0",
     "@google/generative-ai": "^0.22.0",
@@ -26,6 +27,7 @@
     "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "pdf.js-extract": "^0.2.1",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
