Added comprehensive data handling and analysis with AI, User sentimental profile and portfolio generation. Better data management. Styling and formatting to be followed

--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "fi-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "type-check": "tsc --noEmit",
@@ -17,24 +18,14 @@
     "@azure/storage-blob": "^12.26.0",
     "@google/generative-ai": "^0.22.0",
     "@prisma/client": "^6.4.1",
-    "@prisma/engines": "^6.4.1",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@types/react-pdf": "^5.0.7",
-    "axios": "^1.7.9",
-    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.17.1",
     "framer-motion": "^12.4.7",
-    "google-auth-library": "^9.15.1",
-    "next": "^15.1.7",
-    "next-auth": "^4.24.11",
-    "pdf.js-extract": "^0.2.1",
-    "prisma": "^6.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-error-boundary": "^5.0.0",
-    "react-icons": "^5.5.0",
-    "recharts": "^2.15.1",
-    "styled-components": "^6.1.15",
-    "yfinance": "^0.0.6"
+    "next": "latest",
+    "openai": "^4.85.4",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -78,6 +69,7 @@
     "@types/json5": "^0.0.30",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20.17.19",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/styled-components": "^5.1.34",
