--- a/fi-frontend/package.json
+++ b/fi-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -13,9 +13,13 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
-    "@auth/prisma-adapter": "^2.7.4",
+    "@auth/prisma-adapter": "^2.8.0",
     "@azure/storage-blob": "^12.26.0",
+    "@google-cloud/language": "^5.3.0",
+    "@google-cloud/storage": "^7.15.2",
     "@google/generative-ai": "^0.22.0",
+    "@grpc/grpc-js": "^1.12.6",
+    "@grpc/proto-loader": "^0.7.13",
     "@prisma/client": "^6.4.1",
     "@prisma/engines": "^6.4.1",
     "@react-pdf-viewer/core": "^3.12.0",
@@ -30,6 +34,7 @@
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
@@ -39,6 +44,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.21.0",
+    "@grpc/grpc-js": "^1.9.7",
     "@next/eslint-plugin-next": "^15.1.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^6.6.3",
@@ -77,9 +83,10 @@
     "@types/json-schema": "^7.0.15",
     "@types/json5": "^0.0.30",
     "@types/next-auth": "^3.13.0",
-    "@types/node": "^20.17.19",
+    "@types/node": "^20.17.22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-dropzone": "^4.2.2",
     "@types/styled-components": "^5.1.34",
     "@types/zen-observable": "^0.8.7",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
