--- a/Fi/fi-backend/package.json
+++ b/Fi/fi-backend/package.json
@@ -1,12 +1,15 @@
 {
   "name": "fi-backend",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "watch": "tsx watch src/index.ts"
+    "watch": "tsx watch src/index.ts",
+    "lint": "eslint --ext .ts src/",
+    "lint:fix": "eslint --ext .ts src/ --fix",
+    "type-check": "tsc --noEmit",
+    "prebuild": "npm run type-check"
   },
   "keywords": [],
   "author": "",
@@ -33,17 +36,23 @@
     "picklejs": "^0.101.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/firebase": "^2.4.32",
     "@types/node": "^22.13.8",
     "@types/pdf-parse": "^1.1.4",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-promise": "^7.2.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0"
   },
   "main": "index.js",
   "description": ""
