--- a/Fi/fi-backend/package.json
+++ b/Fi/fi-backend/package.json
@@ -1,9 +1,10 @@
 {
   "name": "fi-backend",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node -r tsconfig-paths/register dist/index.js",
     "dev": "tsx src/index.ts",
     "watch": "tsx watch src/index.ts",
     "lint": "eslint --ext .ts src/",
