Refactor frontend structure: remove unused utility files, add API routes for risk assessment, profile, chat, and portfolio generation; implement authentication handling; update Dockerfile and TypeScript configuration

--- a/Fi/fi-backend/package.json
+++ b/Fi/fi-backend/package.json
@@ -22,22 +22,19 @@
     "@google-cloud/language": "^6.5.0",
     "@google-cloud/storage": "^7.15.2",
     "@google/generative-ai": "^0.22.0",
+    "@grpc/grpc-js": "^1.12.6",
+    "@types/helmet": "^0.0.48",
     "@types/next": "^8.0.7",
     "axios": "^1.8.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "firebase": "^11.4.0",
-    "firebase-admin": "^13.1.0",
-    "next": "^15.2.0",
-    "node-cache": "^5.1.2",
-    "openai": "^4.86.1",
-    "pdf-parse": "^1.1.1",
+    "firebase-admin": "^13.2.0",
+    "openai": "^4.86.2",
     "picklejs": "^0.101.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
+    "@types/axios": "^0.9.36",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
