Update backend structure: add new controllers for market and profile, remove deprecated API routes, enhance .gitignore, and update TypeScript configuration

--- a/Fi/fi-frontend/package.json
+++ b/Fi/fi-frontend/package.json
@@ -16,6 +16,15 @@
     "dependencies": {
   
       
+    "@chakra-ui/react": "^3.9.0",
+  
+      
+    "@emotion/react": "^11.14.0",
+  
+      
+    "@emotion/styled": "^11.14.0",
+  
+      
     "@shadcn/ui": "^0.0.4",
   
       
