--- a/Fi/fi-backend/package.json
+++ b/Fi/fi-backend/package.json
@@ -24,12 +24,19 @@
     "@google/generative-ai": "^0.22.0",
     "@grpc/grpc-js": "^1.12.6",
     "@types/helmet": "^0.0.48",
-    "@types/next": "^8.0.7",
     "axios": "^1.8.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "firebase-admin": "^13.2.0",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "^15.2.1",
+    "node-cache": "^5.1.2",
     "openai": "^4.86.2",
+    "pdf-parse": "^1.1.1",
     "picklejs": "^0.101.0"
   },
   "devDependencies": {
@@ -37,9 +44,14 @@
     "@types/axios": "^0.9.36",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/firebase": "^2.4.32",
-    "@types/node": "^22.13.8",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
+    "@types/next": "^8.0.7",
+    "@types/node": "^22.13.9",
+    "@types/node-cache": "^4.1.3",
     "@types/pdf-parse": "^1.1.4",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
