--- a/Fi/fi-backend/package.json
+++ b/Fi/fi-backend/package.json
@@ -21,7 +21,7 @@
     "@google-cloud/firestore": "^7.11.0",
     "@google-cloud/language": "^6.5.0",
     "@google-cloud/storage": "^7.15.2",
-    "@google/generative-ai": "^0.22.0",
+    "@google/generative-ai": "^0.24.0",
     "@grpc/grpc-js": "^1.12.6",
     "@types/helmet": "^0.0.48",
     "axios": "^1.8.1",
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
@@ -36,7 +37,7 @@
     "next": "^15.2.1",
     "node-cache": "^5.1.2",
     "openai": "^4.86.2",
-    "pdfjs-dist": "^4.10.38",
+    "pdf-parse": "^1.1.1",
     "picklejs": "^0.101.0"
   },
   "devDependencies": {
