--- a/Fi/fi-frontend/package.json
+++ b/Fi/fi-frontend/package.json
@@ -3,8 +3,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx tailwindcss init -p"
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.9.0",
@@ -14,6 +13,7 @@
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "axios": "^1.8.2",
+    "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
     "next": "^15.2.1",
     "react": "^19.0.0",
@@ -21,8 +21,12 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.10",
     "typescript": "^5.8.2",
     "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12"
   }
 }
