Add express-async-handler dependency; update risk assessment and analysis to include user ID; implement ErrorBoundary component

--- a/Fi/fi-backend/tsconfig.json
+++ b/Fi/fi-backend/tsconfig.json
@@ -22,6 +22,6 @@
     "declaration": true,
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/testFirestore.ts"],
   "exclude": ["node_modules", "dist"]
 }
