--- a/Fi/fi-backend/package.json
+++ b/Fi/fi-backend/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.0",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
