--- a/Fi/fi-backend/package.json
+++ b/Fi/fi-backend/package.json
@@ -55,6 +55,7 @@
     "@types/node": "^22.13.9",
     "@types/node-cache": "^4.1.3",
     "@types/pdf-parse": "^1.1.4",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.21.0",
