--- a/Fi/fi-backend/tsconfig.json
+++ b/Fi/fi-backend/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "CommonJS",
     "noEmit": false,
     "rootDir": "./src",
-    "outDir": "./dist",
+    "outDir": "dist",
     "moduleResolution": "Node",
     "strict": true,
     "allowJs": false,
@@ -22,6 +22,6 @@
     "declaration": true,
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*", "src/testFirestore.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
