--- a/Fi/fi-frontend/package.json
+++ b/Fi/fi-frontend/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^19.0.10",
     "axios": "^1.8.2",
     "firebase": "^11.4.0",
-    "framer-motion": "^12.4.10",
+    "framer-motion": "^12.5.0",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,7 +26,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.2",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.13"
   }
 }
